added dailys and labeled most outputs

--- a/covid_analysis.ipynb
+++ b/covid_analysis.ipynb
@@ -10,6 +10,25 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as dt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pd.to_datetime('2020-03-21')-  pd.to_datetime('2019-10-01')\n",
+    "# 62000 / 172.0"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -52,6 +71,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "print(\"US Cumulative Data\")\n",
     "us_df.tail()"
    ]
   },
@@ -61,7 +81,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# tests performed per day\n",
+    "print(\"US Tests 'Performed' per Day\")\n",
     "us_df[['positive', 'negative']].diff(1).sum(axis=1).tail()"
    ]
   },
@@ -71,7 +91,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# us_df.head()\n",
     "ax = us_df['positive'].plot.line(marker='o')\n",
     "ax.set_xlim(us_df.index[0] - 1, us_df.index[-1] + 1)\n",
     "ax.set_title('US Cumulative Positive Cases');"
@@ -83,7 +102,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# new positives\n",
+    "ax = us_df['positive'].diff(1).plot.line(marker='o')\n",
+    "ax.set_xlim(us_df.index[0] - 1, us_df.index[-1] + 1)\n",
+    "ax.set_title('US Daily Positive Cases');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Recent Daily Deaths\")\n",
+    "us_df['death'].diff(1).tail().values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# us_df.head()\n",
+    "ax = us_df['death'].plot.line(marker='o')\n",
+    "ax.set_xlim(us_df.index[0] - 1, us_df.index[-1] + 1)\n",
+    "ax.set_title('US Cumulative Deaths');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = us_df['death'].diff(1).plot.line(marker='o')\n",
+    "ax.set_xlim(us_df.index[0] - 1, us_df.index[-1] + 1)\n",
+    "ax.set_title('US Daily Deaths');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"Recent Positives\")\n",
     "us_df['positive'].diff(1).tail()"
    ]
   },
@@ -125,7 +188,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# total tests performed on day\n",
+    "print(\"PA Cumulative Data\")\n",
+    "pa_df.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"PA Daily 'Performed' Tests\")\n",
     "pa_df[['positive', 'negative']].diff(1).sum(axis=1).tail()"
    ]
   },
@@ -146,8 +219,51 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# pa new positives\n",
-    "pa_df['positive'].diff(1).tail()"
+    "ax = pa_df['positive'].diff(1).plot.line(marker='o')\n",
+    "ax.set_xlim(pa_df.index[0] - 1, pa_df.index[-1] + 1)\n",
+    "ax.set_title('PA Daily Positive Cases');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = pa_df['death'].plot.line(marker='o')\n",
+    "ax.set_xlim(pa_df.index[0] - 1, pa_df.index[-1] + 1)\n",
+    "ax.set_title('PA Cumulative Deaths');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"PA Recent Daily Deaths\")\n",
+    "pa_df['death'].diff(1).tail(10).values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ax = pa_df['death'].diff(1).plot.line(marker='o')\n",
+    "ax.set_xlim(pa_df.index[0] - 1, pa_df.index[-1] + 1)\n",
+    "ax.set_title('PA Daily Deaths');"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(\"PA Recent Daily Positives\")\n",
+    "pa_df['positive'].diff(1).tail(10)"
    ]
   },
   {
@@ -177,7 +293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
