--- a/covid_analysis.ipynb
+++ b/covid_analysis.ipynb
@@ -103,6 +103,8 @@
    "outputs": [],
    "source": [
     "ax = us_df['positive'].diff(1).plot.line(marker='o')\n",
+    "us_df['positive'].diff(1).rolling(14).mean().plot.line()\n",
+    "\n",
     "ax.set_xlim(us_df.index[0] - 1, us_df.index[-1] + 1)\n",
     "ax.set_title('US Daily Positive Cases');"
    ]
@@ -220,6 +222,8 @@
    "outputs": [],
    "source": [
     "ax = pa_df['positive'].diff(1).plot.line(marker='o')\n",
+    "pa_df['positive'].diff(1).rolling(14).mean().plot.line()\n",
+    "\n",
     "ax.set_xlim(pa_df.index[0] - 1, pa_df.index[-1] + 1)\n",
     "ax.set_title('PA Daily Positive Cases');"
    ]
@@ -252,7 +256,10 @@
    "outputs": [],
    "source": [
     "ax = pa_df['death'].diff(1).plot.line(marker='o')\n",
+    "pa_df['death'].diff(1).rolling(14).mean().plot.line()\n",
+    "\n",
     "ax.set_xlim(pa_df.index[0] - 1, pa_df.index[-1] + 1)\n",
+    "#ax.set_ylim(-4, 200)\n",
     "ax.set_title('PA Daily Deaths');"
    ]
   },
